Closed Bug 1695537 Opened 5 years ago Closed 5 years ago

Tag names of elements in template content capitalized even in XHTML documents

Categories

(Core :: DOM: Core & HTML, defect, P3)

Firefox 86
Desktop
All
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox86 --- wontfix
firefox87 --- wontfix
firefox88 --- fixed

People

(Reporter: 1981km, Assigned: hsivonen)

Details

Attachments

(2 files)

Attached file testcase.xhtml

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:86.0) Gecko/20100101 Firefox/86.0

Steps to reproduce:

Open the attached document.

Actual results:

Output:
DIV

Expected results:

Output:
div

Unless I'm reading https://html.spec.whatwg.org/multipage/scripting.html#appropriate-template-contents-owner-document incorrectly.

Chromium outputs in lowercase.

I was able to replicate this on console. Used windows10 64bit , MacOS 10.15 , and ubuntu 20 64bit
and appears with capital letters in beta 87b4, nightly 88 and Release 86

Status: UNCONFIRMED → NEW
Component: Untriaged → Console
Ever confirmed: true
OS: Unspecified → All
Product: Firefox → DevTools
Hardware: Unspecified → Desktop

Component: Untriaged → Console
Product: Firefox → DevTools
That's not right. I encountered this bug in code not involving the console, I just used it in the example.

Component: Console → DOM: Core & HTML
Product: DevTools → Core

hsivonen, you've dealt with some of the template issues, IIRC.

Severity: -- → S3
Flags: needinfo?(hsivonen)
Priority: -- → P3
Pushed by hsivonen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f0d286830ebb Make the template contents owner XML when not in HTML. r=edgar
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/28001 for changes under testing/web-platform/tests
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: