Bug 1695537 - Make the template contents owner XML when not in HTML. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D107216